--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:id="@+id/export_messages_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         android:text="@string/export_messages_button_label"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@+id/export_call_log_button"
@@ -36,6 +37,8 @@
         android:id="@+id/import_messages_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
+
         android:layout_marginTop="20dp"
         android:text="@string/import_messages_button_label"
         app:layout_constraintBottom_toTopOf="@+id/import_call_log_button"
@@ -47,6 +50,7 @@
     <Button
         android:id="@+id/export_call_log_button"
         android:layout_width="0dp"
+        android:layout_marginTop="20dp"
         android:layout_height="0dp"
         android:text="@string/export_call_log_button_label"
         app:layout_constraintBottom_toTopOf="@id/export_contacts_button"
@@ -59,6 +63,7 @@
         android:id="@+id/import_call_log_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         android:text="@string/import_call_log_button_label"
         app:layout_constraintBottom_toTopOf="@id/import_contacts_button"
         app:layout_constraintEnd_toEndOf="parent"
